<resources>
    <string name="app_name">EGO</string>
    <string name="error_db_object_null">Die Datenbank kann nicht geöffnet werden. Bitte Administrator kontaktieren.</string>
    <string name="error_no_navigation_app">Es ist keine passende Navigations-App installiert. Bitte Administrator kontaktieren.</string>
    <string name="button_ok">Verstanden.</string>
    <string name="crash_toast_text">Ein unerwartetes Problem ist aufgetreten. Die App wird geschlossen und Informationen zum Problem gesammelt.</string>
    <string name="crash_dialog_title">Informationen zum letzten Problem</string>
    <string name="crash_dialog_text">Kürzlich ist ein unerwartetes Problem aufgetreten, weshalb die App beendet werden musste.\nHelfen Sie uns bei der Behebung, indem Sie Fehlerinformationen senden. Dazu drücken Sie einfach „OK“.</string>
    <string name="crash_dialog_comment_prompt">Optional: Was taten Sie, als das Problem auftrat?</string>
    <string name="crash_dialog_ok_toast">Vielen Dank!</string>
    <string name="main_activity_action_light">Licht aus</string>
    <string name="main_activity_action_navigation">Navigation</string>
    <string name="main_activity_action_contacts">Kontakte</string>
    <string name="main_activity_action_data_management">Einstellungen</string>
    <string name="main_activity_action_launcher">Launcher starten</string>
    <string name="main_activity_action_about">Über EGO</string>
    <string name="main_activity_tab_addresses">Adressen</string>
    <string name="main_activity_tab_hospitals_doctors">Arzt &amp; KH</string>
    <string name="main_activity_tab_map">Karte</string>
    <string name="address_view_address">Adresse</string>
    <string name="address_view_city">Ort</string>
    <string name="address_view_zipcode">PLZ</string>
    <string name="address_view_street">Straße</string>
    <string name="address_view_streetno">Hausnummer</string>
    <string name="address_view_results">Ergebnisse</string>
    <string name="address_view_remove">Filter entfernen</string>
    <string name="address_view_empty">Es wurden noch keine Adressen importiert.\nIm Menü „Einstellungen“ auswählen, um Daten zu laden.</string>
    <string name="address_view_filter">Suchen…</string>
    <string name="map_view_gps">Meine Position</string>
    <string name="map_view_destination">Ziel</string>
    <string name="map_view_mapmode">Orthofoto anzeigen/ausblenden</string>
    <string name="map_view_nomaps_title">Kartenmaterial</string>
    <string name="map_view_nomaps_text">Teile des Kartenmaterials konnten nicht geladen werden.\n\nFolgende Dateien werden benötigt:\n%1$s\n%2$s</string>
    <string name="hospitals_doctors_view_today">Heute</string>
    <string name="hospitals_doctors_view_now">Jetzt</string>
    <string name="hospitals_doctors_view_hospitals">Aufnahmekrankenhäuser</string>
    <string name="hospitals_doctors_view_hospitals_empty">Für %1$s um %2$s sind keine Aufnahmekrankenhäuser eingetragen.</string>
    <string name="hospitals_doctors_view_destination_hospitals">Zielkrankenhäuser</string>
    <string name="hospitals_doctors_view_doctors">Diensthabende Ärzte</string>
    <string name="hospitals_doctors_view_doctors_empty">Am %1$s um %2$s hat kein Arzt Notdienst.</string>
    <string name="hospitals_doctors_view_doctors_time">Bis %1$s Uhr: %2$s</string>
    <string name="hospitals_doctors_view_date_dialog_title">Datum auswählen</string>
    <string name="hospitals_doctors_view_time_dialog_title">Zeit auswählen</string>
    <string name="house_view_navigate">Navigieren</string>
    <string name="house_view_navigate_external">Extern\nnavigieren</string>
    <string name="house_view_coordinate_north">N</string>
    <string name="house_view_coordinate_east">O</string>
    <string name="house_view_coordinate_south">S</string>
    <string name="house_view_coordinate_west">W</string>
    <string name="house_view_mapsheet">Kartenblatt %s</string>
    <string name="nav_activity_title">Navigation</string>
    <string name="nav_activity_loading_startup">Routenplaner wird gestartet…</string>
    <string name="nav_activity_loading_routing">Route wird geplant…</string>
    <string name="nav_activity_next_direction">Dann</string>
    <string name="nav_activity_arrival">Ankunft</string>
    <string name="nav_activity_time">In %s</string>
    <string name="nav_activity_time_minutes">%s Minuten</string>
    <string name="nav_activity_time_hours">%s Stunden</string>
    <string name="nav_activity_distance">Noch %s</string>
    <string name="nav_activity_distance_meters">%s m</string>
    <string name="nav_activity_distance_kilometers">%s km</string>
    <string name="nav_activity_roundabout_instruction">%1$d. Ausfahrt: %2$s</string>
    <string name="nav_view_nomaps_title">Navigationsdaten fehlen</string>
    <string name="nav_view_nomaps_text">Die Navigationsdaten konnten nicht geladen werden.\n\nFolgendes Verzeichnis wurde gesucht:\n%s</string>
    <string name="nav_view_noroute_title">Route</string>
    <string name="nav_view_noroute_text">Die Route konnte nicht berechnet werden.</string>
    <string name="preferences_activity_title">Einstellungen</string>
    <string name="preferences_activity_data_management_title">Datenverwaltung</string>
    <string name="preferences_activity_import_title">Daten importieren…</string>
    <string name="preferences_activity_app_options_export_title">App-Einstellungen sichern</string>
    <string name="preferences_activity_app_options_export_summary">Exportiert alle Daten auf die SD-Karte</string>
    <string name="preferences_activity_app_options_export_success">Alle Daten wurden erfolgreich nach %s exportiert.</string>
    <string name="preferences_activity_app_options_export_failed">Exportieren aller Daten nach %s fehlgeschlagen.</string>
    <string name="preferences_activity_app_options_import_title">App-Einstellungen wiederherstellen</string>
    <string name="preferences_activity_app_options_import_summary">Importiert alle Daten von der SD-Karte</string>
    <string name="preferences_activity_app_options_import_success">Alle Daten wurden erfolgreich von %s importiert.</string>
    <string name="preferences_activity_app_options_import_failed">Importieren aller Daten von %s fehlgeschlagen.</string>
    <string name="preferences_activity_import_addresses_title">Adressen</string>
    <string name="preferences_activity_import_addresses_summary">aus %sego/import/adressen.csv</string>
    <string name="preferences_activity_import_hospitals_title">Krankenhausaufnahmen</string>
    <string name="preferences_activity_import_hospitals_summary">aus %sego/import/aufnahmen.csv</string>
    <string name="preferences_activity_import_doctors_title">Bereitschaftsdienste</string>
    <string name="preferences_activity_import_doctors_summary">aus %sego/import/bereitschaft.csv</string>
    <string name="preferences_activity_import_use_sd_title">Externe SD-Karte verwenden</string>
    <string name="preferences_activity_import_use_sd_summary_unchecked">Importdateien und Kartenmaterial werden vom internen Gerätespeicher geladen</string>
    <string name="preferences_activity_import_use_sd_summary_checked">Importdateien und Kartenmaterial werden von der externen SD-Karte geladen</string>
    <string name="preferences_activity_map_title">Kartenansicht</string>
    <string name="preferences_activity_map_address_title">Standardposition</string>
    <string name="preferences_activity_map_address_summary">Adresse des standardmäßig auf der Karte zentrierten Ortes</string>
    <string name="preferences_activity_map_address_text">Geben Sie eine Adresse oder Koordinaten im Format „Nord,Ost“ ein.</string>
    <string name="preferences_activity_navigation_title">Navigation…</string>
    <string name="preferences_activity_external_navigation_title">Externe Navigation</string>
    <string name="preferences_activity_navigation_api_title">Schnittstelle</string>
    <string name="preferences_activity_navigation_api_summary">Koordinaten werden per %s weitergegeben</string>
    <string name="preferences_activity_navigation_api_default" translatable="false">geo</string>
    <string name="preferences_activity_internal_navigation_title">Interne Navigation</string>
    <string name="preferences_activity_internal_navigation_coexistence_title">Verwendete Navigationsart</string>
    <string name="preferences_activity_internal_navigation_coexistence_summary">%s nutzen</string>
    <string name="preferences_activity_internal_navigation_coexistence_default" translatable="false">3</string>
    <string name="preferences_activity_internal_navigation_rotate_title">Karte rotieren</string>
    <string name="preferences_activity_internal_navigation_rotate_summary_unckecked">Die Karte zeigt immer nach Norden</string>
    <string name="preferences_activity_internal_navigation_rotate_summary_ckecked">Die Karte zeigt in Fahrtrichtung</string>
    <string name="preferences_activity_hospitals_doctors_view_title">Angezeigte Abschnitte</string>
    <string name="preferences_activity_hospitals_doctors_view_summary">%s werden angezeigt</string>
    <string name="preferences_activity_hospitals_doctors_view_default" translatable="false">3</string>
    <string name="preferences_activity_hospitals_doctors_takeover_title">Übernahme der Krankenhausaufnahme</string>
    <string name="preferences_activity_hospitals_doctors_takeover_summary">Das Aufnahmekrankenhaus wechselt täglich um %s Uhr</string>
    <string name="preferences_activity_hospitals_doctors_permanent_admittances_title">Krankenhäuser mit Daueraufnahme</string>
    <string name="preferences_activity_hospitals_doctors_permanent_admittances_summary">Verwalten der Krankenhäuser, die zu jeder Zeit Patienten aufnehmen</string>
    <string name="preferences_activity_hospitals_doctors_replacement_title">Ersetzungen zur Kontaktsuche</string>
    <string name="preferences_activity_hospitals_doctors_replacement_summary">Verwalten der Namen, unter denen Krankenhäuser und Ärzte in den Kontakten gesucht werden</string>
    <string name="preferences_activity_app_options_title">Erweiterte Einstellungen</string>
    <string name="preferences_activity_app_options_silent_mode_title">Fehlerberichte automatisch senden</string>
    <string name="preferences_activity_app_options_silent_mode_summary_unchecked">Fehlerberichte werden nach Bestätigung gesendet</string>
    <string name="preferences_activity_app_options_silent_mode_summary_checked">Fehlerberichte werden automatisch gesendet</string>
    <string-array name="preferences_activity_navigation_api_entries">
        <item>Geografischer Punkt</item>
        <item>Google-Navigation (und kompatibel)</item>
        <item>Google Maps</item>
        <item>Navigon</item>
    </string-array>
    <string-array name="preferences_activity_navigation_api_values" translatable="false">
        <item>geo</item>
        <item>google.navigation</item>
        <item>geo_q</item>
        <item>navigon</item>
    </string-array>
    <string-array name="preferences_activity_internal_navigation_coexistence_entries">
        <item>Nur interne Navigation</item>
        <item>Nur externe Navigation</item>
        <item>Interne &amp; externe Navigation</item>
    </string-array>
    <string name="about_activity_header">Einsatz-Gesamtorganisation\nVersion %s\n\nEin Projekt der Ortsstelle\nSt. Veit im Mühlkreis</string>
    <string name="about_activity_concept_header">Konzept</string>
    <string name="about_activity_concept_text">Peter Grubmair</string>
    <string name="about_activity_development_header">Entwicklung</string>
    <string name="about_activity_development_text">Philipp Kapfer\nFlorian Helml</string>
    <string name="about_activity_maps_header">Kartenmaterial</string>
    <string name="about_activity_maps_text">Ortsplan: basemap.at\nOrthofotos: geoimage.at</string>
</resources>