<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_navigation"
        android:title="@string/main_activity_action_navigation"
        android:icon="?attr/navigationMenuIcon"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_contacts"
        android:title="@string/main_activity_action_contacts"
        android:icon="?attr/contactsMenuIcon"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_data_management"
        android:title="@string/main_activity_action_data_management"
        android:orderInCategory="800"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/main_activity_action_about"
        android:orderInCategory="900"
        app:showAsAction="never" />
</menu>
