<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="1dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/address_view_address"
        android:id="@+id/address_textViewAddress" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_buttonCity"
                android:layout_column="1"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Base.Spinner"
                android:textStyle="italic"
                android:text="@string/address_view_city"
                android:textColor="?attr/secondaryTextColor" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address_imageButtonClearCity"
                android:layout_column="5"
                android:src="@android:drawable/ic_input_delete"
                android:contentDescription="@string/address_view_remove" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="@style/Widget.AppCompat.Base.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_buttonZip"
                android:layout_column="1"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/address_view_zipcode"
                android:textColor="?attr/secondaryTextColor" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address_imageButtonClearZip"
                android:layout_column="5"
                android:src="@android:drawable/ic_input_delete"
                android:contentDescription="@string/address_view_remove" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="@style/Widget.AppCompat.Base.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_buttonStreet"
                android:layout_column="1"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/address_view_street"
                android:textColor="?attr/secondaryTextColor" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address_imageButtonClearStreet"
                android:layout_column="5"
                android:src="@android:drawable/ic_input_delete"
                android:contentDescription="@string/address_view_remove" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="@style/Widget.AppCompat.Base.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_buttonStreetNo"
                android:layout_column="1"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/address_view_streetno"
                android:textColor="?attr/secondaryTextColor" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address_imageButtonClearStreetNo"
                android:layout_column="5"
                android:src="@android:drawable/ic_input_delete"
                android:contentDescription="@string/address_view_remove" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/address_view_results"
        android:id="@+id/address_textViewResults"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/address_view_empty"
        android:id="@+id/address_textViewEmpty"
        android:layout_gravity="center"
        android:gravity="center" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/address_listViewResults"
        android:headerDividersEnabled="false" />
</LinearLayout>